--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -15,7 +15,7 @@
     }
 }
 
-@media(max-width: 768px){
+/*@media(max-width: 768px){
     .banner {
     .content{
         background-color: black;
@@ -30,4 +30,4 @@
         }
     }
     }
-}
+}*/
